# OS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_E2E_SUMMARY.txt  LICENSE  Makefile  README.md  REFACTOR.md  SECURITY.md  START.sh  START_ALL.sh  STOP.sh  STOP_ALL.sh  Task.md  docker-compose.test.yml  docker-compose.vllm-h200.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-embeddings.txt  requirements.txt  run_all_tests.sh  run_e2e_tests.sh  test_api.py  test_eaton_access.sh  verify_e2e_setup.sh
agents/: __init__.py
agents/concierge/: __init__.py  agent.py  wizard.py
agents/import_agent/: __init__.py  agent.py  parsers.py  schema_mapper.py
api/: __init__.py  config.py  database.py  main.py  scheduler.py
api/middleware/: auth.py
api/models/: __init__.py  audit_log.py  booking.py  connection.py  connection_credential.py  connector.py  connector_category.py  connector_developer.py  connector_review.py  customer.py  deployment.py  engagement.py  expert.py  expert_payout.py  invoice.py  mcp.py  mcp_developer.py  mcp_installation.py  medusa_registration.py  partner.py  subscription.py  support_ticket.py  task.py  usage.py  user.py  workflow.py  workflow_definition.py  workflow_execution.py  workflow_step_log.py  workflow_subscription.py
api/routes/: admin.py  approvals.py  auth.py  bookings.py  claude_data_analyst.py  connections.py  connectors.py  data_value_report.py  deployment_ws.py  deployments.py  engagements.py  expert_auth.py  experts.py  ingestion.py  intelligent_onboarding.py  marketplace.py  mcp_developers.py  mcp_services.py  mcps.py  medusa.py  minio_browser.py  onboarding.py  onboarding_wizard.py  orchestrator.py  partners.py  product_intelligence.py  progress_ws.py  realtime_analysis.py  subscriptions.py  sync.py  tasks.py  upload.py  upload_async.py  users.py  webhooks.py  workflow_developers.py  workflows.py
api/schemas/: __init__.py  billing.py  mcp.py  (+9 more)
clients/: __init__.py
configs/: example-customer.yaml  models.yaml
core/: __init__.py  claude_chat.py  config.py  customer_registry.py  paths.py  platform.py
deployment/: docker-compose.yml
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE-V2.md  DEPLOYMENT_GUIDE.md  INTELLIGENT_ONBOARDING.md  MARKETING.md  MARKETPLACE_INTEGRATION.md  MCP-ARCHITECTURE.md  ONBOARDING_ARCHITECTURE.md  ORCHESTRATOR_MCP.md  PRODUCT_INTELLIGENCE_FLOW.md
inference/: Dockerfile  Dockerfile.embeddings  __init__.py  config.py  embedding_server.py  lora_manager.py  lora_trainer.py  requirements-embeddings.txt  requirements.txt  server.py
ingestion/: claude_handler_generator.py  orchestrator.py
integration/: EXAMPLE_FLOWS.md  nextjs-mcp-client.ts  nextjs-webhook-handler.ts
lakehouse/: Dockerfile  STANDARD_SCHEMAS.md  __init__.py  server.py
mcps/: __init__.py  registry.py
memory/: 2026-01-30.md
migrations/: env.py
orchestrator/: database_gateway.py
scripts/: archive-status-docs.sh  build_all_images.sh  build_customer_console.py  create_customer_delivery.sh  create_eaton_customer.py  create_product_master_json.py  deploy-h200.sh  download_eaton_pdfs.py  export_customer_data.py  generate-secrets.sh  import_eaton_full_catalog.py  ingest_p360_syndication.py  migrate_eaton.sh  migrate_lightnet.sh  parse_lightnet_excel.py  parse_products_simple.py  quick-start-h200.sh  reimport_eaton.py  seed_connectors_focused.py  seed_demo_data.py  seed_marketplace.py  seed_marketplace_mcps.py  seed_mcps_with_direction.py  seed_platform_admin.py  seed_simple.py  seed_workflows.py  setup_bosch_client.py  setup_bosch_minio.sh  start-website-daemon.sh  start_all_new_architecture.sh  start_cradle.sh  start_mcp_central.sh  sync_eaton_categories.py  test_bmecat_generation.py  transform_lightnet_products.py  upload_bosch_media.py  upload_bosch_to_minio_simple.sh  validate_customer_build.sh
templates/: Dockerfile.customer-console.j2  docker-compose.customer.yml.j2  init_console_db.sh.j2  supervisord.customer.conf.j2
tests/: README.md  __init__.py  conftest.py  test_agents_e2e.py
zero711/: __init__.py
(+563 files in other folders)
